log
Wed, Mar 19, 2025  8:39:35 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:14 AM: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:64:16: error: comparison between pointer and integer [-Werror]
    while(valor != NULL)
                ^~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
ef40a13
Wed, Mar 19, 2025  9:12:16 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:64:12: error: comparison between pointer and integer [-Werror]
    while(L != -1)
            ^~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
6396a53
Wed, Mar 19, 2025  9:13:39 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
f05a3ea
Wed, Mar 19, 2025  9:16:41 AM: 
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
43191e6
Wed, Mar 19, 2025  9:17:19 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:16: error: comparison between pointer and integer [-Werror]
    while(valor != -1)
                ^~
cc1.exe: all warnings being treated as errors
Compilation failed
dd7d410
Wed, Mar 19, 2025  9:17:31 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
6562537
Wed, Mar 19, 2025  9:23:04 AM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:97:18: error: comparison between pointer and integer [-Werror]
    while(top(P1) != -1){
                  ^~
exercises.c:98:22: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int elemento = top(P1) ;
                      ^~~
exercises.c:99:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(pila_aux, elemento) ;
                      ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:103:24: error: comparison between pointer and integer [-Werror]
    while(top(pila_aux) != -1){
                        ^~
exercises.c:104:22: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int elemento = top(pila_aux) ;
                      ^~~
exercises.c:105:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P1, elemento) ;
                ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:106:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P2, elemento) ;
                ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:111:11: error: 'return' with a value, in function returning void [-Werror]
    return P2 ;
           ^~
exercises.c:95:6: note: declared here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
exercises.c:99:7: error: 'pila_aux' may be used uninitialized in this function [-Werror=maybe-uninitialized]
       push(pila_aux, elemento) ;
       ^~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fba8880
Wed, Mar 19, 2025  9:25:00 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:97:18: error: comparison between pointer and integer [-Werror]
    while(top(P1) != -1){
                  ^~
exercises.c:98:22: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int elemento = top(P1) ;
                      ^~~
exercises.c:99:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(pila_aux, elemento) ;
                      ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:103:24: error: comparison between pointer and integer [-Werror]
    while(top(pila_aux) != -1){
                        ^~
exercises.c:104:22: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int elemento = top(pila_aux) ;
                      ^~~
exercises.c:105:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P1, elemento) ;
                ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:106:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P2, elemento) ;
                ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:111:11: error: 'return' with a value, in function returning void [-Werror]
    return P2 ;
           ^~
exercises.c:95:6: note: declared here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3a5f121
